# llmdriver

./: README.md  pyproject.toml
llmdriver/: ChatgptAutomator.py  __init__.py  llmdriver.py  notebooklm.py
